--- a/apidoc/index.html
+++ b/apidoc/index.html
@@ -8,7 +8,7 @@
   <link href="vendor/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="vendor/prettify.css" rel="stylesheet" media="screen">
   <link href="css/style.css" rel="stylesheet" media="screen, print">
-  <link href="img/beta.ico" rel="icon" type="image/x-icon">
+  <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <script src="vendor/polyfill.js"></script>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -21,7 +21,7 @@
     
     <div class="row">
       <div class="sidenav-logo col-md-2">
-        <img src="img/beta.png" />
+        <img src="img/logo.png" />
         {{#if apiName}}<h3>{{{apiName}}}</h3>{{/if}}
       </div>
     </div>
